<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".About" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/created_by" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_section_top"
            android:textColor="@color/blue"
            android:text="@string/how_to_play" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_text_top"
            android:textColor="@color/white"
            android:text="@string/game_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_section_top"
            android:textColor="@color/blue"
            android:text="@string/game_modes" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_text_top"
            android:textColor="@color/white"
            android:text="@string/game_mode_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_text_top"
            android:textColor="@color/white"
            android:text="@string/game_mode_hardcore" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_section_top"
            android:textColor="@color/blue"
            android:text="@string/spell_list" />

        <!-- Spell list -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_section_top"
            android:textColor="@color/red"
            android:text="@string/spell_fireball" />

        <ImageView
            android:layout_width="@dimen/about_spell_rune_width"
            android:layout_height="@dimen/about_spell_rune_height"
            android:src="@drawable/fireball" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_text_top"
            android:textColor="@color/white"
            android:text="@string/spell_description_fireball" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_text_top"
            android:textColor="@color/white"
            android:text="@string/spell_description_fireball_hardcore" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_section_top"
            android:textColor="@color/red"
            android:text="@string/spell_paralyzing_ray" />

        <ImageView
            android:layout_width="@dimen/about_spell_rune_width"
            android:layout_height="@dimen/about_spell_rune_height"
            android:src="@drawable/paralyzingray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_text_top"
            android:textColor="@color/white"
            android:text="@string/spell_description_paralyzing_ray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_text_top"
            android:textColor="@color/white"
            android:text="@string/spell_description_paralyzing_ray_hardcore" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_section_top"
            android:textColor="@color/red"
            android:text="@string/spell_curse" />

        <ImageView
            android:layout_width="@dimen/about_spell_rune_width"
            android:layout_height="@dimen/about_spell_rune_height"
            android:src="@drawable/curse" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_text_top"
            android:textColor="@color/white"
            android:text="@string/spell_description_curse" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_text_top"
            android:textColor="@color/white"
            android:text="@string/spell_description_curse_hardcore" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_section_top"
            android:textColor="@color/red"
            android:text="@string/spell_arcane_shield" />

        <ImageView
            android:layout_width="@dimen/about_spell_rune_width"
            android:layout_height="@dimen/about_spell_rune_height"
            android:src="@drawable/arcaneshield" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_text_top"
            android:textColor="@color/white"
            android:text="@string/spell_description_arcane_shield" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_text_top"
            android:textColor="@color/white"
            android:text="@string/spell_description_arcane_shield_hardcore" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_spell_name_top"
            android:textColor="@color/red"
            android:text="@string/spell_heal" />

        <ImageView
            android:layout_width="@dimen/about_spell_rune_width"
            android:layout_height="@dimen/about_spell_rune_height"
            android:src="@drawable/heal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_text_top"
            android:textColor="@color/white"
            android:text="@string/spell_description_heal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_text_top"
            android:textColor="@color/white"
            android:text="@string/spell_description_heal_hardcore" />

    </LinearLayout>

</ScrollView>
