<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dialog_padding"
    android:background="@drawable/mainmenubutton" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_text_top"
        android:layout_marginLeft="@dimen/dialog_text_left"
        android:text="@string/want_to_exit"
        android:textSize="@dimen/dialog_text_size" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/dialog_yes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/yes"
            android:background="@drawable/mainmenubutton"/>

        <Button
            android:id="@+id/dialog_no_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/no"
            android:background="@drawable/mainmenubutton"/>

    </LinearLayout>

</LinearLayout>